--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {},
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.12.0",
+    "autoprefixer": "^9.7.3",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.4.1",
     "file-loader": "^5.0.2",
